styles/DataSet.module.css
/* ... */
.segmentName{
    margin-left: 7px;
    flex: 1;
    display: flex;
    overflow: hidden;
    font-size: 15px;
}
.objectListContainer{
    font-size: 14px;
    margin-top: 12px;
}
.objectBlock{
    color: #272834;
    box-sizing: border-box;
    height: 32px;
    display: flex;
    align-items: center;
    padding-left: 24px;
    cursor: pointer;
    margin-bottom: 8px;
}
.activeObjectBlock{
    color: #5a3cff;
    background: #f5f7f9;
    margin-right: -20px;
}
.tagHome{
    margin: 0px auto;
    padding-top: 56px;
    background-color: #f3f3f3;
    min-height: 100vh;
}
.homeTop{
    padding: 16px;
    display: flex;
    flex-wrap: wrap-reverse;
}
.tagListLeft{
    display: flex;
    flex-direction: column;
    flex: 1 1 0%;
}
.basicInfoWindow{
    background: #fff;
    padding: 24px;
    padding-bottom: 0px;
}
.tgaTitle{
    margin-bottom: 32px;
    border-left: 3px solid #5a3cff;
    text-indent: 12px;
    height: 18px;
    font-weight: 600;
    font-size: 18px;
    color: #333;
    line-height: 18px;
}
.tagTopList{
    display: flex;
    flex-wrap: wrap;
    font-size: 14px;
}
.topListBox{
    display: flex;
    flex: 1 1 0%;
    flex-direction: column;
    margin-bottom: 8px;
    margin-right: 16px;
    min-width: 248px;
}
.listBoxTitle{
    font-size: 16px;
    font-weight: bold;
    margin-bottom: 24px;
}
.listBoxSpan{
    display: flex;
    margin-bottom: 18px;
}
.boxSpanLeft{
    color: rgb(137, 138, 150);
    flex: 0 0 96px;
}
.boxSpanRight{
    flex: 1 1 0%;
}
.tableTitle{
    display: flex;
    background: rgb(249, 248, 252) none repeat scroll 0% 0%;
    padding: 24px 40px;
    font-size: 14px;
    color: rgb(137, 138, 150);
}
.tableList{
    display: flex;
    padding: 16px 40px;
    font-size: 14px;
    align-items: center;
    color: rgb(39, 42, 66);
}
.tagListRight{
    display: flex;
    flex-direction: column;
    margin-left: 16px;
    flex: 0 0 336px;
    padding: 24px;
    background: #fff;
}
.rigBox{
    padding: 16px;
    background: rgb(247, 247, 247) none repeat scroll 0% 0%;
    margin-bottom: 8px;
}
.taghometop{
    padding: 16px;
}
.filehome{
    background: #fff;
    padding: 24px;
}
.BreadcrumbsList{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    font-size: 12px;
}
.BreadcrumNumb{
    border-radius: 50%;
    width: 16px;
    height: 16px;
    margin-left: 8px;
    margin-right: 8px;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    border: 1px solid #bec0d0;
    color: #bec0d0;
    text-align: center;
    line-height: 15px;
}
.stepperDivider{
    border: 1px solid #e5e7f5;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-item-align: center;
    align-self: center;
    width: 40px;
    margin-left: 8px;
}
.tagBoxIndex{
    overflow: hidden;
    min-height: 660px;
}
.tagBoxTitle{
    margin-bottom: 8px;
    color: rgb(89, 89, 89);
    font-weight: 600;
    padding-right: 24px;
}
.dataList{
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
    overflow-y: auto;
    /* margin: 0 -16px; */
    padding-bottom: 50px;
}
.dataListBox{
    margin: 8px;
    flex:0 0 calc(23% - 16px);
    max-width: 280px;
}
.boxImg{
    position: relative;
    overflow: hidden;
    -webkit-box-flex: 1;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
    max-width: 100%;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}
.boxImgBack{
    width: 100%;
}
.boxSpanimg{
    padding: 10px; 
    color: rgb(75, 75, 83);
    font-size: 15px;
}
.boxIndex{
    box-shadow: 0px 3px 14px -4px rgb(96, 96, 96);
}
.userName{
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: 13px;
    margin-top: 30px;
}
.basicInfoWindow{
    padding: 24px;
}
.BreadcrumbsListStyle{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    font-size: 12px;
    color: #5a3cff;
}
.BreadcrumbsListGreen{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    font-size: 12px;
    color: rgb(76, 175, 80);
}
.BreadcrumbsListStyle .BreadcrumNumb{
    background: #5a3cff;
    border: 1px solid #5a3cff;
    color: #fff;
    width: 17px;
    height: 17px;
}
.BreadcrumbsListGreen .BreadcrumNumb{
    background: rgb(76, 175, 80);
    border: 1px solid rgb(76, 175, 80);
    color: #fff;
    width: 17px;
    height: 17px;
}
.tagType{
    
}
.DatasetInfoFieldTagChipSpan{
    font-size: 12px;
    color: #666;
}
.exmaine_home{
    width: 850px;
    margin: 0px auto;
    margin-top: 100px;
}
.msgHeading{
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 12px 0;
    border-bottom: 1px solid #dbe0e9;
}
.examineList{
    padding: 24px 0;
    border-bottom: 1px solid #dbe0e9;
    display: flex;
}
.msgWrapper{
    flex-grow: 1;
    font-size: 14px !important;
color: #272834;
}
.msgTitle{
    display: flex;
    align-items: center;
    /* justify-content: space-between; */
}
.msgTitleText{
    font-weight: 500;
    color: #272834;
    margin-right: 12px;
    margin-left: 10px;
}
.msgDetails p{
    margin-top: 12px;
    margin-bottom: 0px;
}
.sheet{
    height: 48px;
    margin-top: 0px;
    transform: translateY(0px);
    left: 0px;
    right: 0px;
    border-radius: 0px;
    background-color: #272a42 !important;
    color: #fff;
    border-bottom: 1px solid rgb(62, 65, 96);
}
.numb_list{
    color: white;
    font-size: 12px;
    font-weight: 600;
    margin-left: 16px;
    margin-right: 16px;
}
body .sub{
    background: #272a42 ;
}
body .sub:hover{
    background: #454861;
}
body .pagenet{
    background: #3e4160;
    color: #c9c9c9;
    margin: 0px 7px;
}
body .pagenet:hover{
    background: #444768;
}
/* ... */

